login-page v1.1 - Forgot password, loading bar, handle authentication error

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,8 +45,9 @@ html {
   --shadow: rgba(0, 0, 0, 0.1);
   --link: #06b6d4;
   --link-hover: #0891b2;
-  --error-text: #dc2626;
   --gradient-primary: linear-gradient(45deg, #cffafe, #38bdf8, #e0f2fe);
+  --error-text: #dc2626;
+  --logo: #38bdf8;
 
   // --primary-color: #f5f5f5;
   // --secondary-color: #eee;
@@ -65,6 +66,7 @@ html {
   --link: #f43f5e;
   --link-hover: #fb7185;
   --gradient-primary: linear-gradient(45deg, #b65f87, #e20f0c, orange);
+  --logo: #f43f5e;
 
   // --secondary-text-color: #d2d1d1;
   // --hover-text-color: #030303;
