--- a/src/component/Header/index.scss
+++ b/src/component/Header/index.scss
@@ -14,6 +14,7 @@
   }
 
   &__title {
+    color: var(--logo);
     font-size: 2.5rem;
     padding: 0.25rem;
   }
@@ -21,10 +22,10 @@
     font-size: 1.25rem;
   }
   &__auth {
-    *:first-child {
-      padding-right: 0.5rem;
-      margin-right: 0.5rem;
-      border-right: 1px solid var(--text-primary);
+    * + * {
+      padding-left: 0.5rem;
+      margin-left: 0.5rem;
+      border-left: 1px solid var(--text-primary);
     }
     *:hover {
       opacity: 0.75;
