--- a/src/component/Modal/index.scss
+++ b/src/component/Modal/index.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
 
   .modal {
     position: relative;
