--- a/src/index.scss
+++ b/src/index.scss
@@ -48,6 +48,7 @@ html {
   --gradient-primary: linear-gradient(45deg, #cffafe, #38bdf8, #e0f2fe);
   --error-text: #dc2626;
   --logo: #38bdf8;
+  --unread: #22d3ee;
 
   // --primary-color: #f5f5f5;
   // --secondary-color: #eee;
@@ -67,6 +68,7 @@ html {
   --link-hover: #fb7185;
   --gradient-primary: linear-gradient(45deg, #b65f87, #e20f0c, orange);
   --logo: #f43f5e;
+  --unread: #fb7185;
 
   // --secondary-text-color: #d2d1d1;
   // --hover-text-color: #030303;
