--- a/src/components/AuthLayout/index.scss
+++ b/src/components/AuthLayout/index.scss
@@ -6,13 +6,13 @@
 
   &__header {
     width: 40%;
-    .title {
+    .logo-text {
       color: var(--logo);
       font-size: 4rem;
       font-weight: bold;
       margin-bottom: 1rem;
     }
-    .content {
+    .header-text {
       font-size: 1.5rem;
       font-weight: lighter;
     }
