--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
 
-  transition: color 0.1s linear, background-color 0.1s linear;
+  transition: background-color 0.1s linear !important;
 }
 
 a {
@@ -49,12 +49,7 @@ html {
   --error-text: #dc2626;
   --logo: #38bdf8;
   --unread: #22d3ee;
-
-  // --primary-color: #f5f5f5;
-  // --secondary-color: #eee;
-  // --primary-text-color: #030303;
-  // --secondary-text-color: #333;
-  // --hover-text-color: #fff;
+  --active: #38bdf8;
 }
 
 .dark {
@@ -69,7 +64,5 @@ html {
   --gradient-primary: linear-gradient(45deg, #b65f87, #e20f0c, orange);
   --logo: #f43f5e;
   --unread: #fb7185;
-
-  // --secondary-text-color: #d2d1d1;
-  // --hover-text-color: #030303;
+  --active: #f43f5e;
 }
