--- a/src/pages/ChatPage/components/ChatWindow/index.scss
+++ b/src/pages/ChatPage/components/ChatWindow/index.scss
@@ -3,6 +3,52 @@
   display: flex;
   margin-left: 0.5rem;
   padding: 1rem;
+  border-radius: 0.2rem 0.5rem 0.5rem 0.2rem;
+  overflow: hidden;
+
+  &__header {
+    width: calc(100% + 2rem);
+    height: 3.5rem;
+    margin: -1rem;
+    padding: 0rem 0.75rem;
+
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--bg-primary);
+    box-shadow: 0 1px 2px var(--shadow);
+
+    .header__room-info {
+      display: flex;
+      align-items: center;
+      .avatar {
+        width: 2rem;
+        height: 2rem;
+        margin-right: 0.75rem;
+      }
+      .room-wrapper {
+        display: flex;
+        flex-direction: column;
+        .name {
+          font-size: 1.25rem;
+        }
+        .status {
+          font-size: 0.85rem;
+          font-weight: lighter;
+        }
+      }
+    }
+    .header__add-user {
+      display: flex;
+      align-items: center;
+      font-size: 1.5rem;
+      &:hover {
+        cursor: pointer;
+        color: var(--link-hover);
+        transform: scale(1.2);
+        transition: all 0.1s linear;
+      }
+    }
+  }
 
   .message-list {
     flex: 1;
@@ -18,6 +64,12 @@
   @media (max-width: 480px) {
     & {
       display: none;
+      width: 100%;
+      border-radius: 0.5rem;
+      margin: 0;
+    }
+    &.show {
+      display: flex;
     }
   }
 }
