--- a/src/pages/ChatPage/components/SideBar/index.scss
+++ b/src/pages/ChatPage/components/SideBar/index.scss
@@ -5,22 +5,30 @@
 
   &__search {
     background-color: var(--bg-primary) !important;
+    border-radius: 0.5rem 0.2rem 0.2rem 0.2rem !important;
     box-shadow: 0 2px 4px var(--shadow);
   }
 
   &__chat-list {
     flex: 1;
     margin-top: 0.5rem;
-    padding: 1rem 0.5rem;
-    overflow-y: scroll;
+    padding: 1rem 0.25rem;
+    border-radius: 0.2rem 0.2rem 0.2rem 0.5rem;
 
     display: flex;
     justify-content: flex-start;
+    overflow-y: scroll;
   }
 
   @media (max-width: 480px) {
     & {
       width: 100%;
+      &__search {
+        border-radius: 0.5rem 0.5rem 0.2rem 0.2rem !important;
+      }
+      &__chat-list {
+        border-radius: 0.2rem 0.2rem 0.5rem 0.5rem;
+      }
     }
   }
 }
