--- a/src/pages/ChatPage/components/SearchUser/index.scss
+++ b/src/pages/ChatPage/components/SearchUser/index.scss
@@ -11,7 +11,7 @@
   .result-list {
     display: flex;
     flex-direction: column;
-    padding: 0 1rem 1rem;
+    // padding: 0 1rem 1rem;
     width: 99%;
     background-color: var(--bg-primary);
     text-align: left;
@@ -33,7 +33,9 @@
     .result {
       display: flex;
       align-items: center;
-      margin-top: 0.75rem;
+      // margin-top: ;
+      padding: 0.75rem 1rem;
+      border-radius: 0.5rem;
 
       svg {
         width: 100%;
@@ -72,6 +74,7 @@
       }
       &:hover {
         cursor: pointer;
+        background-color: var(--bg-secondary);
         .result__icon {
           color: var(--active);
         }
