--- a/src/pages/ChatPage/components/SideBar/index.scss
+++ b/src/pages/ChatPage/components/SideBar/index.scss
@@ -17,7 +17,7 @@
 
     display: flex;
     justify-content: flex-start;
-    overflow-y: scroll;
+    overflow-y: auto;
     .create-room {
       margin: 0;
       padding: 0.5rem 1rem;
