--- a/src/pages/ChatPage/components/ChatWindow/index.scss
+++ b/src/pages/ChatPage/components/ChatWindow/index.scss
@@ -5,6 +5,11 @@
   padding: 1rem;
   border-radius: 0.2rem 0.5rem 0.5rem 0.2rem;
   overflow: hidden;
+  &__text {
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--link-hover);
+  }
 
   &__header {
     width: calc(100% + 2rem);
@@ -57,7 +62,7 @@
     justify-content: flex-start;
 
     width: calc(100% + 2rem);
-    padding: 0.25rem 1rem;
+    padding: 0.25rem 1rem 0.75rem;
     overflow-y: scroll;
   }
 
