--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
 
-  transition: background-color 0.1s linear !important;
+  transition: background-color 0.1s linear;
 }
 
 a {
