final 2.0 - unread feature, sort room by last update, fix bug ui

--- a/src/pages/ChatPage/components/Message/index.scss
+++ b/src/pages/ChatPage/components/Message/index.scss
@@ -109,6 +109,7 @@
     .message__text {
       font-size: 1.25rem;
       font-style: italic;
+      text-align: center;
       opacity: 0.9;
       margin: 0;
       padding: 0;
