--- a/src/pages/ChatPage/components/Message/index.scss
+++ b/src/pages/ChatPage/components/Message/index.scss
@@ -1,68 +1,47 @@
 .message {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   width: 100%;
-  position: relative;
 
-  &.first {
+  .message-wrapper {
+    display: flex;
+    align-items: center;
+    width: 100%;
     .message__avatar {
+      width: 2rem;
+      height: 2rem;
+      margin-right: 0.5rem;
+
       img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        border-radius: 100%;
+        display: none;
+      }
+    }
+    .message__text {
+      max-width: 80%;
+      margin-top: 0.25rem;
+      padding: 0.5rem 0.75rem;
+      word-wrap: break-word;
+
+      &.slide-up {
+        animation: slideUp 0.3s linear;
       }
     }
   }
-  &__name {
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    font-size: 0.7rem;
-    transform: translate(2.5rem, -80%);
-  }
-  &__avatar {
-    width: 2rem;
-    height: 2rem;
-    margin-right: 0.5rem;
-
-    img {
-      display: none;
-    }
-  }
-  &__text {
-    max-width: 80%;
-    margin-top: 0.25rem;
-    padding: 0.5rem 0.75rem;
-    word-wrap: break-word;
-
-    &.slide-up {
-      animation: slideUp 0.3s linear;
-    }
-  }
-
-  &__time {
-    position: absolute;
-    opacity: 0;
-    bottom: 0;
-    font-size: 0.65rem;
-    transform: translateY(125%);
-  }
-
   &--sent {
-    justify-content: end;
+    align-items: flex-end;
+    .message-wrapper {
+      justify-content: flex-end;
+      .message__name {
+        display: none;
+      }
 
-    .message__name {
-      display: none;
+      .message__text {
+        background-color: var(--bg-primary);
+        outline: 1.5px solid var(--bg-secondary);
+        border-radius: 1rem 0.1rem 0.1rem 1rem;
+        box-shadow: 2px 2px 2px var(--shadow);
+      }
     }
-
-    .message__text {
-      background-color: var(--bg-primary);
-      outline: 1.5px solid var(--bg-secondary);
-      border-radius: 1rem 0.1rem 0.1rem 1rem;
-      box-shadow: 2px 2px 2px var(--shadow);
-    }
-
     &.first {
       .message__text {
         border-bottom-right-radius: 1rem;
@@ -77,6 +56,8 @@
   }
 
   &--received {
+    align-items: flex-start;
+
     .message__text {
       background-color: var(--bg-secondary);
       border-radius: 0.1rem 1rem 1rem 0.1rem;
@@ -97,11 +78,10 @@
   }
 
   &--initial {
-    justify-content: center;
-    flex-direction: column;
+    text-align: center;
     margin: 2rem 0;
     .message__time {
-      position: relative;
+      display: inline;
       transform: none;
     }
     .message__text {
@@ -113,16 +93,37 @@
       padding: 0;
     }
   }
+
+  &__name {
+    margin-left: 3rem;
+  }
+  &__time {
+    transform: translateY(25%);
+  }
+  &__name,
+  &__time {
+    font-size: 0.65rem;
+    display: none;
+  }
+
   &.last {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     .message__name {
-      opacity: 0.8;
+      display: inline-block;
     }
   }
   &.first {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     .message__time {
-      opacity: 0.8;
+      display: inline-block;
+    }
+    .message__avatar {
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 100%;
+      }
     }
   }
 }
