--- a/src/pages/ChatPage/components/ChatWindow/index.scss
+++ b/src/pages/ChatPage/components/ChatWindow/index.scss
@@ -19,6 +19,7 @@
 
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: var(--bg-primary);
     box-shadow: 0 1px 2px var(--shadow);
 
@@ -47,35 +48,70 @@
         }
       }
     }
-    .header__add-user {
+
+    .manage-member {
       display: flex;
       align-items: center;
+      .add-user {
+        display: flex;
+        align-items: center;
 
-      .search-wrapper {
-        opacity: 0;
-        z-index: -1;
-        transition: all 0.5s linear;
-      }
+        .search-wrapper {
+          opacity: 0;
+          z-index: -1;
+          transition: all 0.5s linear;
+        }
 
-      &.show .search-wrapper {
-        margin-right: 0.5rem;
-        opacity: 1;
-        z-index: 1;
+        &.show .search-wrapper {
+          margin-right: 0.5rem;
+          opacity: 1;
+          z-index: 1;
+        }
+        & > svg {
+          font-size: 1.5rem;
+          transition: all 0.25s linear;
+        }
+        &.show > svg {
+          transform: rotateZ(45deg);
+        }
+        &.show > svg:hover {
+          transform: rotateZ(45deg) scale(1.2);
+        }
       }
-      & > svg {
-        font-size: 1.5rem;
-        transition: all 0.25s linear;
+      .member-list-wrapper {
+        width: 1.5rem;
+        height: 1.5rem;
+        margin-left: 0.5rem;
+        position: relative;
+        svg {
+          width: 100%;
+          height: 100%;
+        }
+        .member-list {
+          position: absolute;
+          top: 0;
+          right: 0;
+          opacity: 0;
+          z-index: -1;
+
+          width: 12.5rem;
+          max-height: 12.5rem;
+          overflow-y: auto;
+
+          background-color: var(--bg-primary);
+          box-shadow: 1px 1px 2px var(--shadow);
+          border-radius: 0 0 0.5rem 0.5rem;
+          transition: all 0.25s linear;
+          &.show {
+            transform: translate(0, 2.5rem);
+            opacity: 1;
+            z-index: 1;
+          }
+        }
       }
-      &.show > svg {
-        transform: rotateZ(45deg);
-      }
-      &.show > svg:hover {
-        transform: rotateZ(45deg) scale(1.2);
-      }
-      & > svg:hover {
+      & svg:hover {
         cursor: pointer;
         color: var(--link-hover);
-        transform: scale(1.2);
         transition: all 0.1s linear;
       }
     }
