--- a/src/pages/ChatPage/components/ManageMember/index.scss
+++ b/src/pages/ChatPage/components/ManageMember/index.scss
@@ -4,15 +4,22 @@
   .add-user {
     display: flex;
     align-items: center;
+    position: relative;
 
     .search-wrapper {
+      position: absolute;
+      right: 0;
+      width: 0;
+      transform: translateX(0);
       opacity: 0;
       z-index: -1;
-      transition: all 0.5s linear;
+      transition: all 0.3s linear;
     }
 
     &.show .search-wrapper {
-      margin-right: 0.5rem;
+      position: absolute;
+      width: 12.5rem;
+      transform: translateX(-2rem);
       opacity: 1;
       z-index: 1;
     }
